DZ13/front-new-k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-new
spec:
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
        version: v2
    spec:
      containers:
        - name: front
          image: kravuar/dz21front-new:latest
          ports:
            - containerPort: 3000
