DZ13/istio-k8s.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-api
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: back
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 3000
        name: front
        protocol: HTTP
      hosts:
        - "*"
