DZ13/back-k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back
          image: kravuar/dz21back:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  ports:
    - port: 8080

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: back
  namespace: app
spec:
  hosts:
    - "*" # It is possible to put the ngrok host instead of wildcard here, but requires more manual steps
  gateways:
    - gateway-api
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: back
            port:
              number: 8080
