DZ13/front-new-canary-k8s.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front
spec:
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: "*"
            subset: v1
          weight: 50
        - destination:
            host: "*"
            subset: v2
          weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front
spec:
  host: "*"
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
