DZ13/router-k8s.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-service
  namespace: app
spec:
  hosts:
    - "*"
  gateways:
    - gateway-api.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: front
            port:
              number: 3000
    - match:
        - uri:
            prefix: /front
      route:
        - destination:
            host: front
            port:
              number: 3000
      rewrite:
        uri: /
    - match:
        - uri:
            prefix: /back
      route:
        - destination:
            host: back
            port:
              number: 8080
      rewrite:
        uri: /
